--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
 FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
+
+# Shopify OAuth credentials
+SHOPIFY_API_KEY=your_shopify_api_key
+SHOPIFY_API_SECRET=your_shopify_api_secret
+SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
