Updated with validation logic

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
 SHOPIFY_API_KEY=your_shopify_api_key
 SHOPIFY_API_SECRET=your_shopify_api_secret
 SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
+
+# Shared state token secret for CSRF protection (used in both Facebook and Shopify flows)
+STATE_TOKEN_SECRET=replace_with_secure_token
