Added digitalocean_genai first version

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,12 @@ SHOPIFY_API_KEY=your_shopify_api_key
 SHOPIFY_API_SECRET=your_shopify_api_secret
 SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
 
+# DigitalOcean API credentials
+DIGITALOCEAN_ACCESS_TOKEN=your_pat
+SPACES_ACCESS_KEY=your_access_key
+SPACES_SECRET_KEY=your_secret_key
+SPACES_BUCKET=your-bucket-name
+SPACES_REGION=nyc3
+
 # Shared state token secret for CSRF protection (used in both Facebook and Shopify flows)
 STATE_TOKEN_SECRET=replace_with_secure_token
