--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
 SHOPIFY_API_KEY=your_shopify_api_key
 SHOPIFY_API_SECRET=your_shopify_api_secret
 SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
+SHOPIFY_WEBHOOK_ADDRESS=https://your-app.com/shopify/webhook
 
 # DigitalOcean API credentials
 DIGITALOCEAN_ACCESS_TOKEN=your_digitalocean_pat
