--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
 FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
+FACEBOOK_WEBHOOK_ADDRESS=https://your-app.com/facebook/webhook
+FACEBOOK_VERIFY_TOKEN=your_verify_token
 
 # Shopify OAuth credentials
 SHOPIFY_API_KEY=your_shopify_api_key
