--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,42 @@
-# Facebook OAuth credentials
+# Facebook OAuth credentials (from Subchapter 1.2)
+# Obtain from Meta Developer Portal under your app's "Settings > Basic"
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
 FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
+# For GitHub Codespaces, use the public URL, e.g.:
+# FACEBOOK_REDIRECT_URI=https://your-codespace-id-5000.app.github.dev/facebook/callback
+# Webhook settings for Facebook (from Subchapter 4.1)
 FACEBOOK_WEBHOOK_ADDRESS=https://your-app.com/facebook/webhook
+# Generate a secure verify token, e.g., using: python -c "import secrets; print(secrets.token_urlsafe(32))"
 FACEBOOK_VERIFY_TOKEN=your_verify_token
 
-# Shopify OAuth credentials
+# Shopify OAuth credentials (from Subchapter 2.2)
+# Obtain from Shopify Partners dashboard under your app's "Overview"
 SHOPIFY_API_KEY=your_shopify_api_key
 SHOPIFY_API_SECRET=your_shopify_api_secret
 SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
+# For GitHub Codespaces, use the public URL, e.g.:
+# SHOPIFY_REDIRECT_URI=https://your-codespace-id-5000.app.github.dev/shopify/callback
+# Webhook settings for Shopify (from Subchapter 5.1)
 SHOPIFY_WEBHOOK_ADDRESS=https://your-app.com/shopify/webhook
 
-# DigitalOcean API credentials
-DIGITALOCEAN_ACCESS_TOKEN=your_digitalocean_pat
-SPACES_ACCESS_KEY=your_digitalocean_access_key
-SPACES_SECRET_KEY=your_digitalocean_secret_key
-SPACES_BUCKET=your-digitalocean-bucket-name
+# DigitalOcean Spaces credentials (from Subchapter 6.3)
+# Obtain from DigitalOcean control panel under "API > Spaces keys"
+SPACES_API_KEY=your_spaces_key
+SPACES_API_SECRET=your_spaces_secret
+# Region for the Spaces bucket (e.g., nyc3, sfo3, ams3, sgp1, fra1)
 SPACES_REGION=nyc3
+# Unique bucket name created in the DigitalOcean control panel
+SPACES_BUCKET=shopify-genai-data
+# Endpoint URL for the Spaces region (e.g., https://nyc3.digitaloceanspaces.com)
+SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
 
-# Shared state token secret for CSRF protection (used in both Facebook and Shopify flows)
+# Shared secret for state token CSRF protection (used in both Facebook and Shopify flows)
+# Replace with a secure, unique value (e.g., generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
 STATE_TOKEN_SECRET=replace_with_secure_token
+
+# Database paths for SQLite storage (from Subchapters 3.1 and 3.2)
+# Set to a writable directory in production (e.g., /var/app/data/tokens.db)
+# Defaults to /app/data/ for compatibility
+TOKEN_DB_PATH=/app/data/tokens.db
+SESSION_DB_PATH=/app/data/sessions.db
