Updated webhook address

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ FACEBOOK_REDIRECT_URI=http://localhost:5000/facebook/callback
 # For GitHub Codespaces, use the public URL, e.g.:
 # FACEBOOK_REDIRECT_URI=https://your-codespace-id-5000.app.github.dev/facebook/callback
 # Webhook settings for Facebook (from Subchapter 4.1)
-FACEBOOK_WEBHOOK_ADDRESS=https://your-app.com/facebook/webhook
+FACEBOOK_WEBHOOK_ADDRESS=http://localhost:5000/facebook/webhook
 # Generate a secure verify token, e.g., using: python -c "import secrets; print(secrets.token_urlsafe(32))"
 FACEBOOK_VERIFY_TOKEN=your_verify_token
 
@@ -18,7 +18,7 @@ SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
 # For GitHub Codespaces, use the public URL, e.g.:
 # SHOPIFY_REDIRECT_URI=https://your-codespace-id-5000.app.github.dev/shopify/callback
 # Webhook settings for Shopify (from Subchapter 5.1)
-SHOPIFY_WEBHOOK_ADDRESS=https://your-app.com/shopify/webhook
+SHOPIFY_WEBHOOK_ADDRESS=http://localhost:5000/shopify/webhook
 
 # DigitalOcean Spaces credentials (from Subchapter 6.3)
 # Obtain from DigitalOcean control panel under "API > Spaces keys"
