Updated env example

--- a/.env.example
+++ b/.env.example
@@ -27,9 +27,16 @@ SPACES_API_SECRET=your_spaces_secret
 # Region for the Spaces bucket (e.g., nyc3, sfo3, ams3, sgp1, fra1)
 SPACES_REGION=nyc3
 # Unique bucket name created in the DigitalOcean control panel
-SPACES_BUCKET=shopify-genai-data
+SPACES_BUCKET=your_spaces_bucket_name
 # Endpoint URL for the Spaces region (e.g., https://nyc3.digitaloceanspaces.com)
 SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
+
+# DigitalOcean GenAI Agent credentials (from Subchapter 8.2)
+# Obtain from the agent settings under "Endpoint Access Keys"
+AGENT_API_KEY=your_agent_name
+AGENT_API_SECRET=your_agent_secret  # Replace with the actual secret key you copied
+AGENT_REGION=tor1  # Region where the agent is deployed (e.g., tor1 from screenshots)
+AGENT_ENDPOINT=https://api.genai.digitalocean.com/v1/agents/your_agent_name  # Example endpoint, adjust as per DigitalOcean docs
 
 # Shared secret for state token CSRF protection (used in both Facebook and Shopify flows)
 # Replace with a secure, unique value (e.g., generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
