--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
-*.env
 *.venv/
 env/
 venv/
@@ -12,6 +11,7 @@ ENV/
 # dotenv environment variables
 .env
 .env.*
+!.env.gpg
 
 # SQLite databases
 *.db
@@ -47,4 +47,4 @@ build/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*.env
+yarn-error.log*
