Fixing digitalocean genai error

--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,8 @@ SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
 # DigitalOcean GenAI Agent credentials (from Subchapter 8.2)
 # Obtain from the agent settings under "Endpoint Access Keys"
 AGENT_API_KEY=your_agent_name
-AGENT_API_SECRET=your_agent_secret  # Replace with the actual secret key you copied
 AGENT_REGION=tor1  # Region where the agent is deployed (e.g., tor1 from screenshots)
-AGENT_ENDPOINT=https://api.genai.digitalocean.com/v1/agents/your_agent_name  # Example endpoint, adjust as per DigitalOcean docs
+AGENT_ENDPOINT=https://your_agent_endpoint.agents.do-ai.run/api/v1/  # Example endpoint, adjust as per DigitalOcean docs
 
 # Shared secret for state token CSRF protection (used in both Facebook and Shopify flows)
 # Replace with a secure, unique value (e.g., generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
