Fixed genai issues

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
 # DigitalOcean GenAI Agent credentials (from Subchapter 8.2)
 # Obtain from the agent settings under "Endpoint Access Keys"
 AGENT_API_KEY=your_agent_key
-AGENT_ENDPOINT=https://your_agent_endpoint.agents.do-ai.run/api/v1/  # Example endpoint, adjust as per DigitalOcean docs
+AGENT_ENDPOINT=https://your_agent_endpoint.agents.do-ai.run/  # Example endpoint, adjust as per DigitalOcean docs
 
 # Shared secret for state token CSRF protection (used in both Facebook and Shopify flows)
 # Replace with a secure, unique value (e.g., generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
