--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Facebook OAuth credentials (from Subchapter 1.2)
+FACEBOOK_ADMIN_USER_ID=your_facebook_user_id
 # Obtain from Meta Developer Portal under your app's "Settings > Basic"
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
