Added shopify revoke route

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ SHOPIFY_REDIRECT_URI=http://localhost:5000/shopify/callback
 # SHOPIFY_REDIRECT_URI=https://your-codespace-id-5000.app.github.dev/shopify/callback
 # Webhook settings for Shopify (from Subchapter 5.1)
 SHOPIFY_WEBHOOK_ADDRESS=http://localhost:5000/shopify/webhook
+SHOPIFY_APP_NAME=your_shopify_app_name
 
 # DigitalOcean Spaces credentials (from Subchapter 6.3)
 # Obtain from DigitalOcean control panel under "API > Spaces keys"
